[REF] Model -> AbstractModel

--- a/views/vehicle_reception.xml
+++ b/views/vehicle_reception.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <openerp>
     <data>
-        <!--- TODO [IMP] -->
+        <menuitem id="menu_receptions"
+            parent="stock.menu_stock_root"
+            name="Receptions"
+            sequence="2"/>
     </data>
 </openerp>
